@@ -5,11 +5,11 @@ citEntry(entry = "manual",
     title = "{lexicon}: Lexicon Data",
     author = "Tyler W. Rinker",
     address = "Buffalo, New York",
-    note = "version 1.2.0",
+    note = "version 1.2.1",
     year = "2018",
     url = "http://github.com/trinker/lexicon",
     textVersion  = paste("Rinker, T. W. (2018).",
         "lexicon: Lexicon Data",
-        "version 1.2.0.",
+        "version 1.2.1.",
         "http://github.com/trinker/lexicon")
 )
